--- a/style.css
+++ b/style.css
@@ -51,92 +51,41 @@ header .login{
  /* fine prima parte sotto l header */
 
  /* inizio seconda parte */
-.container2{
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-}
 
-.top2{
-  text-align: center;
-  padding: 6% 0%;
-  margin: 0 14%;
+.box{
+  width: 80%;
+  padding: 40px 0; 
+  margin: 0 auto;
   display: flex ;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
+}
+
+.box.invertito{
+  flex-direction: row-reverse;
 }
  
-.top2 .immagine{
+.box .immagine{
   background-color: red;
   width: 60%;
   height:300px;
 }
 
-.top2 .testo{
+.box .testo{
   background-color: pink;
   width: 40%;
   height: 300px;
 }
 /* fine seconda parte */
 
-/* terza parte */
-.container3{
-  background-color: gray; 
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-} 
+/* container con lo sfondo grigio */
 
-.top3{
+.container-grey{
   background-color: grey;
-  text-align: center;
-  padding: 6% 3%;
-  margin: 0 14%;
-  display: flex ;
-  flex-direction: row-reverse;
-  justify-content: center;
-  align-items: center;
-}
- 
-.top3 .immagine{
-  background-color: red;
-  width: 60%;
-  height:300px;
-
 }
 
-.top3 .testo{
-  background-color: pink;
-  width: 40%;
-  height: 300px;
-}
-/* fine terza parte */
-
-/* quarta parte */
-.container4{
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-} 
-
-.top4{
-  text-align: center;
-  padding: 6% 3%;
-  margin: 0 14%;
-  display: flex ;
-  justify-content: center;
-  align-items: center;
-}
- 
-.top4 .immagine{
+ .top4 .immagine{
   background-color: rgb(142, 19, 19);
-  /* metti un div largo il 60% con dentro un immagine */
   width: 60%;
   height:300px;
 }
